--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/style.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet"/>
     <meta charset="utf-8">
     <title>Excursion</title>
+    <h1 class="main-title">Discover hidden places in the world around you </h1>
   </head>
   <body>
+    <style>
+    body{
+      background-color: black;
+      text-align: center;
+    }
+    </style>
+    
+    <a class="link" target="_blank">Download Excursion (Coming soon!)</a>
+    <video src="resources/video/excursion.mp4"/>
+    <h1 class="travel-guide"> Your personal travel guide</h1>
+    <p class="interest"> Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img src="resources/images/camp.jpg"/> <br>
+    <img class="img-phone" src="resources/images/phone.png"/>
+    <h2 class="coming-soon"> Coming soon for iPhone and Android </h2> 
+    <a class="link" target="_blank">Download Excursion (Coming soon!)</a>
     
   </body>
 </html>
