--- a/index.html
+++ b/index.html
@@ -3,25 +3,33 @@
   <head>
     <link href="resources/css/style.css" type="text/css" rel="stylesheet"/>
     <meta charset="utf-8">
-    <title>Excursion</title>
-    <h1 class="main-title">Discover hidden places in the world around you </h1>
-  </head>
-  <body>
     <style>
     body{
       background-color: black;
       text-align: center;
     }
     </style>
-    
-    <a class="link" target="_blank">Download Excursion (Coming soon!)</a>
-    <video src="resources/video/excursion.mp4"/>
-    <h1 class="travel-guide"> Your personal travel guide</h1>
+    <title>Excursion</title>
+    <h1 class="main-title">Discover hidden places in the world around you </h1>
+  </head>
+  <body>
+  
+    <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+    <video autoplay=""muted=" "loop"">
+      <source src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4" type="video/mp4"/>
+    </video>
+    <h2 class="travel-guide"> Your personal travel guide</h2>
     <p class="interest"> Excursion remembers places you like, and recommends new points of interest around you.</p>
     <img src="resources/images/camp.jpg"/> <br>
     <img class="img-phone" src="resources/images/phone.png"/>
     <h2 class="coming-soon"> Coming soon for iPhone and Android </h2> 
-    <a class="link" target="_blank">Download Excursion (Coming soon!)</a>
+    <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+
+<!-- footer -->
+
+<div class="footer">
+      <p>© Excursion</p>
+    </div>
     
   </body>
 </html>
