--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </video>
     <h2 class="travel-guide"> Your personal travel guide</h2>
     <p class="interest"> Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <img src="resources/images/camp.jpg"/> <br>
-    <img class="img-phone" src="resources/images/phone.png"/>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg"/> <br>
+    <img class="img-phone" src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png"/>
     <h2 class="coming-soon"> Coming soon for iPhone and Android </h2> 
     <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
 
